--- a/LAB_01/02/flipbyte/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/LAB_01/02/flipbyte/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -22,8 +22,9 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{A65DA733-907C-4BF3-8F6F-79B8A3EF1EED}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <RootNamespace>flipbyte</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>flipbyte</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
